Get all amending laws sorted publication date
RISDEV-3430